tests/error/static_if_ternary_ends_to_early.c
// fail "Expected ':'."

#if 9671?7447


